--- a/_config.yml
+++ b/_config.yml
@@ -9,37 +9,36 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Asia/Kolkata
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Cobra Sanjay # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: 1 nd only # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
-
+  My unmatched perspicacity coupled with sheer indefatigability makes me a feared opponent in any realm of human endeavor
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://github.com/cobrasanjay1/cobrasanjay1.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: cobrsanjay1 # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: cobrasanjay1 # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Sanjay Vinod
+  email: cobra@cobranet.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://twitter.com/cobrasanjay1 # change to your Twitter homepage
+    - https://github.com/cobrasanjay1 # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -98,7 +97,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://lh3.googleusercontent.com/a/ACg8ocK4Wn4VKlwURxkS68LV1VCzPgxi295BMWICpmMfx7QzF56q_uuiWg=s288-c-no
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
@@ -109,14 +108,14 @@ toc: true
 
 comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
-  provider: # [disqus | utterances | giscus]
+  provider: utterances
   # The provider options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
   # utterances settings › https://utteranc.es/
   utterances:
-    repo: # <gh-username>/<repo>
-    issue_term: # < url | pathname | title | ...>
+    repo: https://github.com/cobrasanjay1/cobrasanjay1.github.io
+    issue_term: title
   # Giscus options › https://giscus.app
   giscus:
     repo: # <gh-username>/<repo>
