--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Asia/Kolkata
 
 title: Cobra Sanjay # the main title
 
-tagline: 1 nd only # it will display as the sub-title
+tagline: 1 nd only (TOPG) # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   My unmatched perspicacity coupled with sheer indefatigability makes me a feared opponent in any realm of human endeavor
