--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Asia/Kolkata
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Cobra Sanjay 1 # the main title
+title: Cobra Sanjay # the main title
 
 tagline: 1 nd only (TOPG ) # it will display as the sub-title
 
