--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # used by seo meta and the atom feed
 url: "https://github.com/cobrasanjay1/cobrasanjay1.github.io"
 
 github:
-  username: cobrsanjay1 # change to your GitHub username
+  username: cobrasanjay1 # change to your GitHub username
 
 twitter:
   username: cobrasanjay1 # change to your Twitter username
